--- a/NYC_CitiBike_Challenge.ipynb
+++ b/NYC_CitiBike_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Create a DataFrame for the 201908-citibike-tripdata data. \n",
-    "df = pd.read_csv(\"201908-citibike-tripdata.csv\")\n"
+    "df = pd.read_csv(\"csv/201908-citibike-tripdata.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -45,29 +45,29 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2. Check the datatypes of your columns. \n",
-    "df.dtypes\n"
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 3. Convert the 'tripduration' column to datetime datatype.\n",
-    "df['tripduration'] = pd.to_datetime(df['tripduration'], unit='s')\n"
+    "df['tripduration'] = pd.to_datetime(df['tripduration'], unit='s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -91,30 +91,29 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 4. Check the datatypes of your columns. \n",
-    "df.dtypes\n"
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 5. Export the Dataframe as a new CSV file without the index.\n",
-    "df.to_csv('201908-citibike-tripdata-clean.csv', index=False)\n",
-    "\n"
+    "df.to_csv('csv/201908-citibike-tripdata-clean.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +440,7 @@
        "[2344224 rows x 15 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,13 +448,6 @@
    "source": [
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
